# calltoverify

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android-apk.yml  ci.yml
coordinator/: .dockerignore  Dockerfile  README.md  go.mod  go.sum
coordinator/engine/: engine.go  (+2 more)
docs/: README.md  architecture.md  channels.md  getting-started.md  integration.md  security.md  self-hosting.md
receiver-android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
receiver-pi/: README.md  pyproject.toml
receiver-pi/agi/: ctv_dtmf.py  ctv_oncall.py
receiver-pi/calltoverify_pi/: __init__.py  cli.py  client.py  config.py  retry.py
receiver-pi/contrib/: asterisk-extensions.conf.example  ctv-pi.service  gammu-smsd.conf.example  make-dtmf-prompt.sh
receiver-pi/tests/: test_client.py  test_config.py  test_retry.py
scripts/: e2e.sh
sdk-client-flutter/: README.md  pubspec.yaml
sdk-client-react/: README.md  package-lock.json  package.json  tsconfig.json
sdk-server-node/: README.md  package-lock.json  package.json  tsconfig.json
sdk-server-php/: README.md  composer.json  phpunit.xml.dist
sdk-server-python/: README.md  pyproject.toml
sdk-server-python/calltoverify/: __init__.py
sdk-server-python/tests/: test_client.py
widget-web/: README.md  package-lock.json  package.json  tsconfig.json
(+117 files in other folders)
