[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calltoverify-pi"
version = "0.1.0"
description = "CallToVerify Raspberry Pi receiver: SMS via gammu, DTMF and missed calls via Asterisk."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["otp", "phone-verification", "raspberry-pi", "gammu", "asterisk", "calltoverify"]
authors = [{ name = "The CallToVerify Authors" }]

[project.urls]
Homepage = "https://github.com/Eshpelin/calltoverify"

[project.scripts]
ctv-pi = "calltoverify_pi.cli:main"

[tool.setuptools]
packages = ["calltoverify_pi"]
