[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calltoverify"
version = "0.1.0"
description = "Server SDK for CallToVerify — free, self-hosted phone number verification."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
keywords = ["otp", "phone-verification", "2fa", "sms", "calltoverify"]
authors = [{ name = "The CallToVerify Authors" }]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Eshpelin/calltoverify"
Repository = "https://github.com/Eshpelin/calltoverify"

[tool.setuptools]
packages = ["calltoverify"]
